--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
         <h1 class="title">To Do</h1>
       </ion-header-bar>
       <ion-content>
-      <ion-list>
+      <ion-list> <!--Left out this -->
       <ion-item ng-repeat="task in tasks" 
                  class="item-icon-right" 
                  ng-class="{complete: task.completed}" 
@@ -47,7 +47,7 @@
         </ion-option-button>
        {{task.title}}   
       </ion-item>
-      </ion-list>
+      </ion-list> <!--Left out this -->
       </ion-content>
     </ion-pane>
   </body>
