--- a/www/index.html
+++ b/www/index.html
@@ -30,14 +30,14 @@
         </button>
         <h1 class="title">To Do</h1>
       </ion-header-bar>
-      <ion-content>
+      <ion-content class="has-header">
       <div id="content" ng-show="tasks.length === 0">
               No Task Added
             </div>
       <ion-list> <!--Left out this -->
       <ion-item ng-repeat="task in tasks" class="item-icon-right" ng-class="{complete: task.completed}" ng-click="task.completed = !task.completed">
         <i class="icon ion-ios-arrow-left"></i>
-          <ion-option-button class="button-assertive" ng-click="tasks.splice($index, 1)">
+          <ion-option-button class="button-assertive" ng-click="data.splice($index, 1)">
             Delete
           </ion-option-button>
         <ion-option-button class="button-energized" ng-click="edit(task)">
